--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "webflow-typescript-scss-boilerplate",
-  "version": "1.0.0",
-  "private": true,
+  "version": "1.1.0",
+  "author": "Jacek Pytlik",
+  "license": "MIT",
   "scripts": {
     "serve": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "clean": "rimraf -rf dist",
     "lint": "eslint ./src --ext .ts,.tsx --cache --fix --quiet"
   },
-  "author": "Jacek Pytlik",
-  "license": "ISC",
   "dependencies": {
     "jquery": "^3.6.3"
   },
@@ -18,6 +17,7 @@
     "@babel/preset-env": "^7.15.6",
     "@types/jquery": "^3.5.16",
     "@types/webpack": "^5.28.0",
+    "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "babel-loader": "^9.1.2",
@@ -28,10 +28,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "mini-css-extract-plugin": "^2.7.2",
-    "node-sass": "^8.0.0",
     "path": "^0.12.7",
     "prettier": "^2.8.3",
     "rimraf": "^4.1.2",
+    "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
